--- a/src/scss/_components/sign/_sign.scss
+++ b/src/scss/_components/sign/_sign.scss
@@ -73,6 +73,9 @@
         &__subtitle {
           padding-bottom: 15px;
         }
+        &__btn {
+          margin-bottom: 42px;
+        }
       }
     }
 
@@ -95,6 +98,31 @@
             width: calc(100% + 30px);
             height: calc(100% + 60px);
             margin-top: -30px;
+          }
+        }
+      }
+
+      &__content {
+        width: 100%;
+        max-width: 436px;
+      }
+
+      &__info {
+        padding: 8px 15px 8px 40px;
+        background-color: #f2f2f2;
+        text-align: left;
+
+        span {
+          text-align: left;
+
+          br {
+            display: none;
+          }
+
+          i {
+            left: -20px;
+            top: 50%;
+            transform: translateY(-50%);
           }
         }
       }
@@ -304,7 +332,7 @@
     text-align: center;
 
     i {
-      z-index: -1;
+      z-index: 0;
       position: absolute;
       display: flex;
       align-items: center;
