Header - full adaptive.

--- a/dest/css/app.css
+++ b/dest/css/app.css
@@ -514,37 +514,55 @@ picture {
           justify-content: center;
 }
 
-/* line 70, src/scss/_shared/_common.scss */
+@media screen and (max-width: 991px) {
+  /* line 67, src/scss/_shared/_common.scss */
+  .nav--header .nav__list {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+}
+
+/* line 73, src/scss/_shared/_common.scss */
 .nav--header .nav__list-btn {
   color: #333333;
 }
 
-/* line 75, src/scss/_shared/_common.scss */
+@media screen and (max-width: 991px) {
+  /* line 73, src/scss/_shared/_common.scss */
+  .nav--header .nav__list-btn {
+    min-height: 45px;
+  }
+}
+
+/* line 81, src/scss/_shared/_common.scss */
 .nav--footer {
   padding-left: 107px;
 }
 
 @media screen and (max-width: 991px) {
-  /* line 75, src/scss/_shared/_common.scss */
+  /* line 81, src/scss/_shared/_common.scss */
   .nav--footer {
     padding-left: 30px;
   }
 }
 
 @media screen and (max-width: 767px) {
-  /* line 75, src/scss/_shared/_common.scss */
+  /* line 81, src/scss/_shared/_common.scss */
   .nav--footer {
     padding-left: 0;
     padding-bottom: 38px;
   }
 }
 
-/* line 85, src/scss/_shared/_common.scss */
+/* line 91, src/scss/_shared/_common.scss */
 .nav--footer .nav__list-btn {
   color: #ffffff;
 }
 
-/* line 90, src/scss/_shared/_common.scss */
+/* line 96, src/scss/_shared/_common.scss */
 .nav__list {
   display: -webkit-box;
   display: -webkit-flex;
@@ -556,32 +574,32 @@ picture {
           align-items: center;
 }
 
-/* line 94, src/scss/_shared/_common.scss */
+/* line 100, src/scss/_shared/_common.scss */
 .nav__list-item {
   padding-left: 20px;
   padding-right: 20px;
 }
 
 @media screen and (max-width: 767px) {
-  /* line 98, src/scss/_shared/_common.scss */
+  /* line 104, src/scss/_shared/_common.scss */
   .nav__list-item:first-of-type {
     padding-left: 0;
   }
-  /* line 101, src/scss/_shared/_common.scss */
+  /* line 107, src/scss/_shared/_common.scss */
   .nav__list-item:last-of-type {
     padding-right: 0;
   }
 }
 
 @media screen and (max-width: 374px) {
-  /* line 94, src/scss/_shared/_common.scss */
+  /* line 100, src/scss/_shared/_common.scss */
   .nav__list-item {
     padding-left: 10px;
     padding-right: 10px;
   }
 }
 
-/* line 111, src/scss/_shared/_common.scss */
+/* line 117, src/scss/_shared/_common.scss */
 .nav__list-btn {
   white-space: nowrap;
   display: -webkit-box;
@@ -597,7 +615,7 @@ picture {
   text-transform: uppercase;
 }
 
-/* line 124, src/scss/_shared/_common.scss */
+/* line 130, src/scss/_shared/_common.scss */
 .logo {
   display: -webkit-box;
   display: -webkit-flex;
@@ -609,14 +627,14 @@ picture {
           align-items: flex-start;
 }
 
-/* line 128, src/scss/_shared/_common.scss */
+/* line 134, src/scss/_shared/_common.scss */
 .logo--footer {
   position: relative;
   top: -9px;
 }
 
 @media screen and (max-width: 767px) {
-  /* line 128, src/scss/_shared/_common.scss */
+  /* line 134, src/scss/_shared/_common.scss */
   .logo--footer {
     top: 0;
     -webkit-box-pack: center;
@@ -627,21 +645,41 @@ picture {
   }
 }
 
-/* line 137, src/scss/_shared/_common.scss */
+/* line 143, src/scss/_shared/_common.scss */
 .logo--footer svg {
   width: 205px;
   fill: #fff;
 }
 
-/* line 143, src/scss/_shared/_common.scss */
+/* line 148, src/scss/_shared/_common.scss */
+.logo--header {
+  position: relative;
+}
+
+/* line 151, src/scss/_shared/_common.scss */
+.is-hideScroll .logo--header {
+  z-index: 1001;
+}
+
+/* line 155, src/scss/_shared/_common.scss */
 .logo--header svg {
-  width: 100%;
-  height: 100%;
+  width: 268px;
+  height: 67px;
   -webkit-filter: drop-shadow(0px 15px 0px rgba(0, 0, 0, 0.05));
           filter: drop-shadow(0px 15px 0px rgba(0, 0, 0, 0.05));
 }
 
-/* line 153, src/scss/_shared/_common.scss */
+@media screen and (max-width: 767px) {
+  /* line 155, src/scss/_shared/_common.scss */
+  .logo--header svg {
+    width: 172px;
+    height: 42px;
+    -webkit-filter: drop-shadow(0px 8px 10px rgba(0, 0, 0, 0.05));
+            filter: drop-shadow(0px 8px 10px rgba(0, 0, 0, 0.05));
+  }
+}
+
+/* line 170, src/scss/_shared/_common.scss */
 .copyright {
   display: -webkit-box;
   display: -webkit-flex;
@@ -654,7 +692,7 @@ picture {
 }
 
 @media screen and (max-width: 767px) {
-  /* line 153, src/scss/_shared/_common.scss */
+  /* line 170, src/scss/_shared/_common.scss */
   .copyright {
     -webkit-box-pack: center;
     -webkit-justify-content: center;
@@ -663,7 +701,7 @@ picture {
   }
 }
 
-/* line 160, src/scss/_shared/_common.scss */
+/* line 177, src/scss/_shared/_common.scss */
 .copyright p {
   line-height: 1.43;
   letter-spacing: 1px;
@@ -671,33 +709,33 @@ picture {
 }
 
 @media screen and (max-width: 767px) {
-  /* line 160, src/scss/_shared/_common.scss */
+  /* line 177, src/scss/_shared/_common.scss */
   .copyright p {
     text-align: center;
   }
 }
 
 @media screen and (max-width: 767px) {
-  /* line 168, src/scss/_shared/_common.scss */
+  /* line 185, src/scss/_shared/_common.scss */
   .copyright p span {
     display: none;
   }
 }
 
-/* line 174, src/scss/_shared/_common.scss */
+/* line 191, src/scss/_shared/_common.scss */
 .copyright p a {
   text-decoration: underline;
   color: #ffffff;
 }
 
 @media screen and (max-width: 767px) {
-  /* line 174, src/scss/_shared/_common.scss */
+  /* line 191, src/scss/_shared/_common.scss */
   .copyright p a {
     display: block;
   }
 }
 
-/* line 187, src/scss/_shared/_common.scss */
+/* line 204, src/scss/_shared/_common.scss */
 .subscribe__form {
   overflow: hidden;
   position: relative;
@@ -717,7 +755,7 @@ picture {
   background-color: #ffffff;
 }
 
-/* line 198, src/scss/_shared/_common.scss */
+/* line 215, src/scss/_shared/_common.scss */
 .subscribe__form-icon {
   display: -webkit-box;
   display: -webkit-flex;
@@ -738,13 +776,13 @@ picture {
   height: 100%;
 }
 
-/* line 208, src/scss/_shared/_common.scss */
+/* line 225, src/scss/_shared/_common.scss */
 .subscribe__form-icon .icon-subscribe {
   font-size: 13px;
   color: rgba(74, 74, 74, 0.23);
 }
 
-/* line 214, src/scss/_shared/_common.scss */
+/* line 231, src/scss/_shared/_common.scss */
 .subscribe__form input,
 .subscribe__form button {
   outline: none;
@@ -756,7 +794,7 @@ picture {
   min-height: 100%;
 }
 
-/* line 223, src/scss/_shared/_common.scss */
+/* line 240, src/scss/_shared/_common.scss */
 .subscribe__form input {
   width: 100%;
   max-width: -webkit-calc(100% - 110px);
@@ -796,7 +834,7 @@ picture {
   font-size: 16px;
 }
 
-/* line 236, src/scss/_shared/_common.scss */
+/* line 253, src/scss/_shared/_common.scss */
 .subscribe__form button {
   cursor: pointer;
   display: -webkit-box;
@@ -2266,7 +2304,14 @@ picture {
   min-height: 67px;
 }
 
-/* line 11, src/scss/_components/_header.scss */
+@media screen and (max-width: 767px) {
+  /* line 3, src/scss/_components/_header.scss */
+  .header {
+    min-height: 52px;
+  }
+}
+
+/* line 14, src/scss/_components/_header.scss */
 .header__bg {
   z-index: -1;
   position: absolute;
@@ -2279,7 +2324,16 @@ picture {
           box-shadow: 0 15px 0 0 rgba(0, 0, 0, 0.05);
 }
 
-/* line 22, src/scss/_components/_header.scss */
+@media screen and (max-width: 767px) {
+  /* line 14, src/scss/_components/_header.scss */
+  .header__bg {
+    height: 100%;
+    -webkit-box-shadow: 0 8px 10px 0 rgba(0, 0, 0, 0.05);
+            box-shadow: 0 8px 10px 0 rgba(0, 0, 0, 0.05);
+  }
+}
+
+/* line 29, src/scss/_components/_header.scss */
 .header__wrapper {
   display: -webkit-box;
   display: -webkit-flex;
@@ -2292,7 +2346,7 @@ picture {
   height: 100%;
 }
 
-/* line 27, src/scss/_components/_header.scss */
+/* line 34, src/scss/_components/_header.scss */
 .header__wrapper-mobile {
   display: -webkit-box;
   display: -webkit-flex;
@@ -2313,25 +2367,76 @@ picture {
 }
 
 @media screen and (max-width: 991px) {
-  /* line 27, src/scss/_components/_header.scss */
+  /* line 34, src/scss/_components/_header.scss */
   .header__wrapper-mobile {
     display: none;
+    overflow-y: auto;
+    z-index: 1000;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+    -webkit-justify-content: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    position: fixed;
+    top: 51px;
+    left: 0;
+    width: 100%;
+    height: -webkit-calc(100% - 51px);
+    height: calc(100% - 51px);
+    padding: 50px 15px;
+    background-color: rgba(255, 255, 255, 0.95);
+    -webkit-transition: -webkit-transform 0.3s ease-in-out;
+    transition: -webkit-transform 0.3s ease-in-out;
+    -o-transition: transform 0.3s ease-in-out;
+    transition: transform 0.3s ease-in-out;
+    transition: transform 0.3s ease-in-out, -webkit-transform 0.3s ease-in-out;
+  }
+  /* line 55, src/scss/_components/_header.scss */
+  .header__wrapper-mobile.is-open {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
   }
 }
 
-/* line 37, src/scss/_components/_header.scss */
+@media screen and (max-width: 767px) {
+  /* line 34, src/scss/_components/_header.scss */
+  .header__wrapper-mobile {
+    top: 52px;
+    height: -webkit-calc(100% - 52px);
+    height: calc(100% - 52px);
+  }
+}
+
+/* line 65, src/scss/_components/_header.scss */
 .header__wrapper-left, .header__wrapper-middle, .header__wrapper-right {
   min-height: 100%;
 }
 
-/* line 43, src/scss/_components/_header.scss */
+@media screen and (max-width: 991px) {
+  /* line 65, src/scss/_components/_header.scss */
+  .header__wrapper-left, .header__wrapper-middle, .header__wrapper-right {
+    min-height: auto;
+  }
+}
+
+/* line 74, src/scss/_components/_header.scss */
 .header__wrapper-left {
   width: 100%;
   max-width: 272px;
 }
 
 @media screen and (max-width: 991px) {
-  /* line 43, src/scss/_components/_header.scss */
+  /* line 74, src/scss/_components/_header.scss */
   .header__wrapper-left {
     display: -webkit-box;
     display: -webkit-flex;
@@ -2349,14 +2454,14 @@ picture {
   }
 }
 
-/* line 53, src/scss/_components/_header.scss */
+/* line 84, src/scss/_components/_header.scss */
 .header__wrapper-left .hamburger {
   display: none;
-  padding-bottom: 12px;
+  margin-bottom: 12px;
 }
 
 @media screen and (max-width: 991px) {
-  /* line 53, src/scss/_components/_header.scss */
+  /* line 84, src/scss/_components/_header.scss */
   .header__wrapper-left .hamburger {
     display: -webkit-box;
     display: -webkit-flex;
@@ -2365,7 +2470,15 @@ picture {
   }
 }
 
-/* line 62, src/scss/_components/_header.scss */
+@media screen and (max-width: 767px) {
+  /* line 84, src/scss/_components/_header.scss */
+  .header__wrapper-left .hamburger {
+    margin-top: 10px;
+    margin-bottom: 0;
+  }
+}
+
+/* line 97, src/scss/_components/_header.scss */
 .header__wrapper-middle {
   -webkit-box-flex: 1;
   -webkit-flex: 1;
@@ -2375,7 +2488,17 @@ picture {
   max-width: 100%;
 }
 
-/* line 68, src/scss/_components/_header.scss */
+@media screen and (max-width: 991px) {
+  /* line 97, src/scss/_components/_header.scss */
+  .header__wrapper-middle {
+    -webkit-box-flex: 0;
+    -webkit-flex: 0;
+        -ms-flex: 0;
+            flex: 0;
+  }
+}
+
+/* line 106, src/scss/_components/_header.scss */
 .header__wrapper-right {
   display: -webkit-box;
   display: -webkit-flex;
@@ -2390,7 +2513,23 @@ picture {
   max-width: 225px;
 }
 
-/* line 77, src/scss/_components/_header.scss */
+@media screen and (max-width: 991px) {
+  /* line 106, src/scss/_components/_header.scss */
+  .header__wrapper-right {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: center;
+    -webkit-justify-content: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    max-width: 100%;
+  }
+}
+
+/* line 120, src/scss/_components/_header.scss */
 .header__btn {
   display: -webkit-box;
   display: -webkit-flex;
@@ -2398,7 +2537,7 @@ picture {
   display: flex;
 }
 
-/* line 80, src/scss/_components/_header.scss */
+/* line 123, src/scss/_components/_header.scss */
 .header__btn-pre {
   margin-right: 24px;
   white-space: nowrap;
@@ -2408,7 +2547,15 @@ picture {
   text-transform: uppercase;
 }
 
-/* line 89, src/scss/_components/_header.scss */
+@media screen and (max-width: 991px) {
+  /* line 123, src/scss/_components/_header.scss */
+  .header__btn-pre {
+    min-height: 45px;
+    margin-right: 0;
+  }
+}
+
+/* line 136, src/scss/_components/_header.scss */
 .header__btn-login {
   -webkit-box-align: center;
   -webkit-align-items: center;
@@ -2433,7 +2580,7 @@ picture {
   transition: color 0.3s ease-in-out, background-color 0.3s ease-in-out;
 }
 
-/* line 104, src/scss/_components/_header.scss */
+/* line 151, src/scss/_components/_header.scss */
 .header__btn-login:hover {
   background-color: transparent;
   color: #44b4a8;
