--- a/src/scss/_components/_header.scss
+++ b/src/scss/_components/_header.scss
@@ -7,6 +7,9 @@
   left: 0;
   width: 100%;
   min-height: 67px;
+  @include adaptive(767) {
+    min-height: 52px;
+  }
 
   &__bg {
     z-index: -1;
@@ -17,6 +20,10 @@
     height: 51px;
     background-color: #ffffff;
     box-shadow: 0 15px 0 0 rgba(#000, 0.05);
+    @include adaptive(767) {
+      height: 100%;
+      box-shadow: 0 8px 10px 0 rgba(#000, 0.05);
+    }
   }
 
   &__wrapper {
@@ -31,6 +38,27 @@
       flex: 1;
       @include adaptive(991) {
         display: none;
+        overflow-y: auto;
+        z-index: 1000;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        position: fixed;
+        top: 51px;
+        left: 0;
+        width: 100%;
+        height: calc(100% - 51px);
+        padding: 50px 15px;
+        background-color: rgba(#fff, 0.95);
+        @include transition(transform);
+
+        &.is-open {
+          display: flex;
+        }
+      }
+      @include adaptive(767) {
+        top: 52px;
+        height: calc(100% - 52px);
       }
     }
 
@@ -38,6 +66,9 @@
     &-middle,
     &-right {
       min-height: 100%;
+      @include adaptive(991) {
+        min-height: auto;
+      }
     }
 
     &-left {
@@ -52,9 +83,13 @@
 
       .hamburger {
         display: none;
-        padding-bottom: 12px;
+        margin-bottom: 12px;
         @include adaptive(991) {
           display: flex;
+        }
+        @include adaptive(767) {
+          margin-top: 10px;
+          margin-bottom: 0;
         }
       }
     }
@@ -63,6 +98,9 @@
       flex: 1;
       min-width: 1px;
       max-width: 100%;
+      @include adaptive(991) {
+        flex: 0;
+      }
     }
 
     &-right {
@@ -71,6 +109,11 @@
       padding-bottom: 15px;
       width: 100%;
       max-width: 225px;
+      @include adaptive(991) {
+        flex-direction: column;
+        justify-content: center;
+        max-width: 100%;
+      }
     }
   }
 
@@ -84,6 +127,10 @@
       letter-spacing: 1px;
       color: #333333;
       text-transform: uppercase;
+      @include adaptive(991) {
+        min-height: 45px;
+        margin-right: 0;
+      }
     }
 
     &-login {
