--- a/src/scss/_shared/_common.scss
+++ b/src/scss/_shared/_common.scss
@@ -66,9 +66,15 @@
 
     .nav__list {
       justify-content: center;
+      @include adaptive(991) {
+        flex-direction: column;
+      }
 
       &-btn {
         color: #333333;
+        @include adaptive(991) {
+          min-height: 45px;
+        }
       }
     }
   }
@@ -140,10 +146,21 @@
     }
   }
   &--header {
+    position: relative;
+
+    .is-hideScroll & {
+      z-index: 1001;
+    }
+
     svg {
-      width: 100%;
-      height: 100%;
+      width: 268px;
+      height: 67px;
       filter: drop-shadow(0px 15px 0px rgba(#000, 0.05));
+      @include adaptive(767) {
+        width: 172px;
+        height: 42px;
+        filter: drop-shadow(0px 8px 10px rgba(#000, 0.05));
+      }
     }
   }
 }
